tests/snapshots/test_runner__tests__compiler__typecheck__or_pattern_extraneous_binding_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Foo = #A(x: String, y: String) | #B(x: String, y: String, z: String)

entry
  {
    \#A(x, y) | #B(x, y, z) -> 1
        //               ^ Error: extraneous binding `z`
  } (#A(x = "hi", y= "bye"))

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/or_pattern_extraneous_binding_1.kk:6:26
  │
6 │     \#A(x, y) | #B(x, y, z) -> 1
  │                          ^ Extraneous Binding
  │
  = All preceding patterns does not have this binding, namely `z`.
    Note that every patterns in an OR pattern must have the same set of bindings.
    In this case:
